test/grammar/types/var_type_annotation/type_fail_10/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:7:1
  |
7 | foo: Foo = Bar {
  | ^ expected Foo, got Bar
  |